--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,4 +12,8 @@
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </RecyclerView>
 </RelativeLayout>
