--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,51 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="MyMaterialTheme" parent="MyMaterialTheme.Base">
         <item name="android:windowActionBar">false</item>
+        <item name="windowActionBarOverlay">false</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="windowActionModeOverlay">false</item>
         <item name="windowNoTitle">true</item>
+
+    </style>
+
+    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+        <!-- 窗口的背景颜色 -->
+        <item name="android:windowBackground">@android:color/white</item>
+        <!-- SearchView -->
+        <item name="searchViewStyle">@style/MySearchViewStyle</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="ToolBarStyle" parent="">
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    </style>
+
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!--Background for the search query section (e.g. EditText)-->
+        <!--<item name="queryBackground"></item>-->
+        <!--Background for the actions section (e.g. voice, submit)-->
+        <!--<item name="submitBackground"></item>-->
+        <!--Close button icon-->
+        <!--<item name="closeIcon"></item>-->
+        <!--Search button icon-->
+        <!--<item name="searchIcon"></item>-->
+        <!--Go/commit button icon-->
+        <!--<item name="goIcon"></item>-->
+        <!--Voice search button icon-->
+        <!--<item name="voiceIcon"></item>-->
+        <!--Commit icon shown in the query suggestion row-->
+        <!--<item name="commitIcon"></item>-->
+        <!--Layout for query suggestion rows-->
+        <!--<item name="suggestionRowLayout"></item>-->
     </style>
 
 </resources>
